; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_default_event_loop.c_esp_event_handler_unregister.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_default_event_loop.c_esp_event_handler_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_default_loop = common dso_local global i32* null, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_event_handler_unregister(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32*, i32** @s_default_loop, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %11, i32* %4, align 4
  br label %18

12:                                               ; preds = %3
  %13 = load i32*, i32** @s_default_loop, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @esp_event_handler_unregister_with(i32* %13, i32 %14, i32 %15, i32 %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %12, %10
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @esp_event_handler_unregister_with(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
